--- a/frontend-opencps-v2.1/quanLyTuyenSearch/package.json
+++ b/frontend-opencps-v2.1/quanLyTuyenSearch/package.json
@@ -13,6 +13,7 @@
     "fibers": "^4.0.1",
     "vue": "~2.6",
     "vue-function-api": "^2.1.2",
+    "vue-router": "^3.1.3",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
