--- a/csdlhc-bogiaothong/.env
+++ b/csdlhc-bogiaothong/.env
@@ -1,8 +1,8 @@
 NODE_ENV = "bogiaothong"
 BASE_URL = "./"
-VUE_APP_PATH_API = http://apigateway.fds.vn
-VUE_APP_PATH_API_SSO = http://apigateway.fds.vn
-VUE_APP_PATH_REDIRECT_SSO = http://apigateway.fds.vn
+VUE_APP_PATH_API = ""
+VUE_APP_PATH_API_SSO = ""
+VUE_APP_PATH_REDIRECT_SSO = ""
 VUE_APP_BASE_TITLE = Cơ sở dữ liệu hành chính - Bộ Giao thông vận tải
 VUE_APP_TITLE_LOGIN = Bộ Giao thông vận tải
 VUE_APP_BASE_COLOR = #2161B1
