--- a/iodev-hoitinhoc/.env
+++ b/iodev-hoitinhoc/.env
@@ -1,12 +1,10 @@
-NODE_ENV = "undpgtvt"
+NODE_ENV = "iodev"
 BASE_URL = "./"
-VUE_APP_PATH_API = http://119.17.200.69:8379
-VUE_APP_PATH_API_SSO = http://119.17.200.69:8379
-VUE_APP_PATH_REDIRECT_SSO = http://119.17.200.69:8032/index.html
-VUE_APP_BASE_TITLE = Hệ thống giám sát và đánh giá thích ứng biến đổi khí hậu bộ Giao thông vận tải
-VUE_APP_TITLE_LOGIN = Bộ Giao thông vận tải
+VUE_APP_PATH_API = http://103.9.211.82:8080
+VUE_APP_PATH_API_SSO = http://103.9.211.82:8080
+VUE_APP_BASE_TITLE = Hệ thống thông tin - IODEV
+VUE_APP_TITLE_LOGIN = 
 VUE_APP_BASE_COLOR = #2161B1
 VUE_APP_PULIC_PATH = ""
 VUE_APP_IMG_BANNER = /images/bg-banner.png
 VUE_APP_IMG_BG_LOGIN = /images/bg-login.png
-VUE_APP_MA_TINH_THANH = 01
