--- a/bca/package.json
+++ b/bca/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.0.28",
     "toastr": "^2.1.4",
     "vite-plugin-fonts": "^0.7.0",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue3-cookies": "^1.0.6",
@@ -32,7 +33,7 @@
     "jsdom": "^20.0.3",
     "prettier": "^2.7.1",
     "rollup-plugin-bundle-analyzer": "^1.6.6",
-    "sass": "^1.58.3",
+    "sass": "^1.63.3",
     "sass-loader": "^13.2.0",
     "vite": "^4.0.0",
     "vitest": "^0.25.6"
